<resources>
    <string name="app_name">CAREFAM</string>
    <string name="top_banner_description">Top Banner</string>
    <string name="home_guide_txt">반려동물과 함께하는 즐거운 하루!</string>
    <string name="ibtn_camp">Camp</string>
    <string name="camp_txt">숙소</string>
    <string name="ibtn_trip">Travel</string>
    <string name="trip_txt">여행</string>
    <string name="ibtn_food">Food</string>
    <string name="food_txt">음식</string>
    <string name="ibtn_cult">Culture</string>
    <string name="cult_txt">시설</string>
    <string name="ibtn_buty">Beauty</string>
    <string name="buty_txt">미용</string>
    <string name="ibtn_medi">Medical</string>
    <string name="medi_txt">의료</string>
    <string name="search_guide">검색어를 입력해주세요.</string>
    <string name="btn_main_home">홈</string>
    <string name="btn_main_search">검색</string>
    <string name="btn_main_map">지도</string>
    <string name="btn_search_seoul">서울특별시</string>
    <string name="btn_search_busan">부산광역시</string>
    <string name="btn_search_incheon">인천광역시</string>
    <string name="btn_search_daegu">대구광역시</string>
    <string name="btn_search_deajeon">대전광역시</string>
    <string name="btn_search_gwangju">광주광역시</string>
    <string name="btn_search_ulsan">울산광역시</string>
    <string name="btn_search_gyeonggi">경기도</string>
    <string name="btn_search_gyeongsang">경상도</string>
    <string name="btn_search_jeolla">전라도</string>
    <string name="btn_search_chungcheong">충청도</string>
    <string name="btn_search_gangwon">강원도</string>
    <string name="btn_search_sejoing">세종\n특별자치시</string>
    <string name="btn_search_jeju">제주\n특별자치도</string>
</resources>

    <!--<string name="btn_main_end">btn_header_right</string>-->